Fixed final bugs when displaying search history, refactored javascript to be more readable, added comments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,9 @@ textarea{
     resize: none;
     height: 30px;
 }
+
+/* Styles clear history button */
+.clear {
+    margin-top: 5px;
+    color: white;
+}
